--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,52 @@
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  position: relative;
+  max-width: 1200px;
+  width: 100%;
+  height: 500px;
+  margin: 0 auto;
+}
+
+.hero-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 .control-btn {
+  position: absolute;
+  width: 2rem;
+  height: 2rem;
+  top: 50%;
+  bottom: 50%;
+  padding: 0.4em;
+  margin-inline: 0.8rem;
+  background: #fff;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 2px 2px 10px #222;
   color: #222;
+  cursor: pointer;
+  transition: opacity 0.2s ease-in;
+}
+
+.control-btn:hover {
+  opacity: 0.8;
+}
+
+.control-btn + .left {
+  left: 0;
+}
+
+.control-btn + .right {
+  right: 0;
 }
