--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #222;
+  min-height: 100vh;
 }
 
 .container {
   position: relative;
   max-width: 1200px;
-  width: 100%;
-  height: 500px;
+  width: 30em;
+  height: 30em;
+  border: 20px solid #fff;
   margin: 0 auto;
 }
 
@@ -27,29 +30,29 @@ body {
 
 .control-btn {
   position: absolute;
-  width: 2rem;
-  height: 2rem;
+  width: 2.4rem;
+  height: 2.4rem;
   top: 50%;
   bottom: 50%;
-  padding: 0.4em;
-  margin-inline: 0.8rem;
+  padding: 0.6em;
+  margin: 0 0.8rem;
   background: #fff;
+  color: #222;
   border: none;
   border-radius: 50%;
   box-shadow: 2px 2px 10px #222;
-  color: #222;
   cursor: pointer;
-  transition: opacity 0.2s ease-in;
+  transition: color 200ms ease-in-out;
 }
 
 .control-btn:hover {
-  opacity: 0.8;
+  color: #ff06ac;
 }
 
-.control-btn + .left {
-  left: 0;
+.left {
+  transform: translateX(-85px);
 }
 
-.control-btn + .right {
-  right: 0;
+.right {
+  transform: translateX(460px);
 }
