--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,16 @@ body {
   width: 100%;
   height: 100%;
   display: block;
+  flex-shrink: 0;
+  flex-grow: 0;
+  transition: translate 300ms ease-in-out;
+}
+
+.image-slider {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .control-btn {
@@ -55,4 +65,13 @@ body {
 
 .right {
   transform: translateX(460px);
+}
+
+.progress-btn {
+  display: flex;
+  gap: 0.25rem;
+  position: absolute;
+  bottom: 0.5rem;
+  left: 50%;
+  translate: -50%;
 }
